--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>apaan coba</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aut illo, exercitationem corporis eveniet nam saepe fuga inventore praesentium iure, possimus iusto velit tempora. Hic eveniet laudantium accusamus voluptatibus incidunt?</p>
 </body>
 </html>
