--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>apaan coba</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati aut illo, exercitationem corporis eveniet nam saepe fuga inventore praesentium iure, possimus iusto velit tempora. Hic eveniet laudantium accusamus voluptatibus incidunt?</p>
+    <ul>
+        <li>satu</li>
+        <li>dua</li>
+        <li>tiga</li>
+    </ul>
 </body>
 </html>
